# KitchenSink

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  utils.py
.github/workflows/: docs.yml
docs/source/: api_reference.rst  conf.py  index.rst
examples/: mic_to_network.py  network_to_speaker.py  raw_websocket_loopback.py  websocket_loopback.py  websocket_mic_to_speaker.py
sinks/: audio_player_sink.py  typed_websocket_audio_sink.py
src/kitchensink/: utils.py
src/kitchensink/sinks/: audio_player_sink.py  base_sink.py  network_audio_sink.py  raw_websocket_audio_sink.py  typed_websocket_audio_sink.py  websocket_audio_sink.py
src/kitchensink/sinks/sinks/: base_sink.py
src/kitchensink/sources/: base_source.py  line_in_source.py  network_audio_source.py  raw_websocket_audio_source.py  typed_websocket_audio_source.py  websocket_audio_source.py
src/kitchensink/sources/sources/: base_source.py  network_audio_source.py
tests/: test_sinks_and_sources.py
