[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitchensink-audio"
version = "0.0.1"
description = "A collection of reusable audio sources and sinks for streaming applications."
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
